Change Log
==========


2019-09-01 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* prevent sending outdated data to my suppliers (#399)
* few more critical bug fixes



2019-08-31 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* minor adjustments in packets logging
* fix issue when supplier is switching (#398)
* bug fix in proxy_receiver() (#397)
* critical bug fix in contactsdb (#396)
* minor fixes in logging (#395)
* open all known shares at startup (#394)



2019-08-27 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* process "identity-url-changed" event in service_private_messages() (#392)
* process "identity-url-changed" event in service_supplier() (#391)



2019-08-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in api.supplier_switch_v1() method (#389)
* more idurl fixes
* added helper devops script devops/dumpdhtdb (#388)



2019-08-22 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* added helper devops script devops/dumpdhtdb
* more bug fixes in family_member() automat  (#387)



2019-08-20 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* py3 fix in fastjsonrpc (#386)
* bug fix in family_member() state machine



2019-08-19 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* fixed missing DeleteBackup() packet handling in service_supplier()  (#384)
* bug fix in lib.fastjsonrpc
* bug fix in backup_matrix  (#382)



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* for proxy router keep current routes only in RAM, do not store on disk as not required (#381)
* one more bug fix in transport/gateway.py  (#380)



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* one more bug fix in  transport/gateway.py



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
