@@ -594,13 +594,15 @@ def PingContact(idurl, timeout=30, retries=2):
 def ping_suppliers(customer_idurl=None, timeout=30, retries=2):
     l = []
     for supplier_idurl in contactsdb.suppliers(customer_idurl=customer_idurl):
-        l.append(PingContact(supplier_idurl, timeout=timeout, retries=retries))
+        if supplier_idurl:
+            l.append(PingContact(supplier_idurl, timeout=timeout, retries=retries))
     return DeferredList(l, consumeErrors=True)
 
 
 def ping_customers(timeout=30, retries=2):
     l = []
     for customer_idurl in contactsdb.customers():
-        l.append(PingContact(customer_idurl, timeout=timeout, retries=retries))
+        if customer_idurl:
+            l.append(PingContact(customer_idurl, timeout=timeout, retries=retries))
     return DeferredList(l, consumeErrors=True)
 
