@@ -4,6 +4,12 @@ Change Log
 
 2019-09-01 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
 
+* bug fix in restore_worker()  (#401)
+
+
+
+2019-09-01 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
+
 * prevent sending outdated data to my suppliers (#399)
 * few more critical bug fixes
 
